resolved smell toList